landing page shows w button.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -1,7 +1,13 @@
 <div class="page landing">
     <div class="top-screen" layout="row" layout-align="center center">
         <div class="content">
-            <h1>Hello there, world!</h1>
+            <img src="static/img/logo.png" alt="">
+
+            <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
+               class="main-button">
+                <i class="fa fa-chrome"></i>
+                Install it free
+            </a>
         </div>
     </div>
 
