with placeholder tagline.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -2,6 +2,9 @@
     <div class="top-screen" layout="row" layout-align="center center">
         <div class="content">
             <img src="static/img/logo.png" alt="">
+            <div class="tagline">
+                Get links to open-access fulltext when you view paywalled research.
+            </div>
 
             <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
                class="main-button">
