--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -3,7 +3,7 @@
         <div class="content">
             <img src="static/img/logo.png" alt="">
             <div class="tagline">
-                Get links to open-access fulltext when you view paywalled research.
+                Find open-access versions of paywalled research papers, instantly.
             </div>
 
             <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
