add table for wood grant.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -1,7 +1,7 @@
 <div class="page landing">
     <div class="top-screen" layout="row" layout-align="center center">
         <div class="content">
-            <img src="static/img/logo.png" alt="">
+            <img src="static/img/logo-hex.png" alt="">
             <div class="tagline">
                 Find open-access versions of paywalled research papers, instantly.
             </div>
