key logo, green bg.

--- a/static/src/wood.tpl.html
+++ b/static/src/wood.tpl.html
@@ -1,10 +1,18 @@
 <div class="page wood">
+
+
+
+    <div class="icon-for-copy">
+        <i class="fa fa-envelope-o"></i>
+    </div>
+
+
     <table>
         <tr class="header">
             <th class="check">check</th>
             <th class="name">Name</th>
             <th class="oa">OA</th>
-            <th class="boost">Potential boost</th>
+            <th class="boost">Potential OA Boost</th>
             <th class="cites impact">
                 <div class="main">Cites</div>
                 <div class="below">
@@ -33,7 +41,7 @@
             <td class="check"><i class="fa fa-check-square-o"></i></td>
             <td class="name">Cindy Cortez</td>
             <td class="oa">6<span class="percent">%</span></td>
-            <td class="boost high">High</td>
+            <td class="boost high"><i class="fa fa-arrow-up"></i> High</td>
             <td>
                 <span class="now cites">1021</span>
                 <span class="boost"><span class="plus">+</span>51</span>
@@ -53,7 +61,7 @@
             <td class="check"><i class="fa fa-check-square-o"></i></td>
             <td class="name">Doris Nguyen</td>
             <td class="oa">31<span class="percent">%</span></td>
-            <td class="boost high">Medium</td>
+            <td class="boost med"><i class="fa fa-arrow-up"></i> Medium</td>
             <td>
                 <span class="now">998</span>
                 <span class="boost"><span class="plus">+</span>36</span>
@@ -73,14 +81,14 @@
             <td class="check"><i class="fa fa-check-square-o"></i></td>
             <td class="name">Luther Peterson</td>
             <td class="oa">27<span class="percent">%</span></td>
-            <td class="boost high">Medium</td>
+            <td class="boost med"><i class="fa fa-arrow-up"></i> Medium</td>
             <td>
                 <span class="now">1013</span>
-                <span class="boost"><span class="plus">+</span>32</span>
+                <span class="boost"><span class="plus">+</span>35</span>
             </td>
             <td>
                 <span class="now">384k</span>
-                <span class="boost"><span class="plus">+</span>185</span>
+                <span class="boost"><span class="plus">+</span>185k</span>
             </td>
             <td>
                 <span class="now">68</span>
@@ -88,35 +96,37 @@
             </td>
         </tr>
 
-        <!-- highly-cited person -->
+        <!-- more highly-cited person -->
+        <!--
         <tr class="med-oa">
             <td class="check"><i class="fa fa-check-square-o"></i></td>
             <td class="name">Marion Sherman</td>
             <td class="oa">21<span class="percent">%</span></td>
-            <td class="boost high">Medium</td>
+            <td class="boost med"><i class="fa fa-arrow-up"></i> Medium</td>
             <td>
-                <span class="now">7739</span>
-                <span class="boost"><span class="plus">+</span>121</span>
+                <span class="now">2029</span>
+                <span class="boost"><span class="plus">+</span>71</span>
             </td>
             <td>
-                <span class="now">2.3M</span>
-                <span class="boost"><span class="plus">+</span>1.8M</span>
+                <span class="now">727k</span>
+                <span class="boost"><span class="plus">+</span>379</span>
             </td>
             <td>
-                <span class="now">386</span>
-                <span class="boost"><span class="plus">+</span>295</span>
+                <span class="now">133</span>
+                <span class="boost"><span class="plus">+</span>74</span>
             </td>
         </tr>
+        -->
 
         <!-- OA Fan -->
         <tr class="high-oa">
             <td class="check"><i class="fa fa-square-o"></i></td>
             <td class="name">Alex Lee</td>
             <td class="oa">96<span class="percent">%</span></td>
-            <td class="boost low">Low</td>
+            <td class="boost low"><i class="fa fa-arrow-up"></i> Low</td>
             <td>
                 <span class="now">1584</span>
-                <span class="boost"><span class="plus">+</span>68</span>
+                <span class="boost"><span class="plus">+</span>3</span>
             </td>
             <td>
                 <span class="now">951k</span>
@@ -128,6 +138,28 @@
             </td>
         </tr>
 
+
+        <!-- TOTAL -->
+        <tr class="total">
+            <td class="check"><i class="fa fa-square-o"></i></td>
+            <td class="name">All Selected</td>
+            <td class="oa">32<span class="percent">%</span></td>
+            <td class="boost med"><i class="fa fa-arrow-up"></i> Medium</td>
+            <td>
+                <span class="now">4616</span>
+                <span class="boost"><span class="plus">+</span>125</span>
+            </td>
+            <td>
+                <span class="now">2.1M</span>
+                <span class="boost"><span class="plus">+</span>697k</span>
+            </td>
+            <td>
+                <span class="now">336</span>
+                <span class="boost"><span class="plus">+</span>129</span>
+            </td>
+        </tr>
+
     </table>
+
 
 </div>
