button shows up green.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -1,5 +1,5 @@
 <div class="page landing">
-    <div class="top-screen" layout="row" layout-align="center center">
+    <div class="top-screen screen" layout="row" layout-align="center center">
         <div class="content">
             <img src="static/img/logo-hex.png" alt="">
             <div class="tagline">
@@ -13,5 +13,52 @@
             </a>
         </div>
     </div>
+    <div class="about-screen screen">
+        <div class="content">
+            <h2>About</h2>
+            <p>
+                Ever get stopped by a paywall from reading a scholarly article?
+                UnPaywall is here to help.
+                <!--
+                It’s easy to use: just install the browser extension
+                from the Chrome App store, and keep browsing like you normally do.
+                -->
+
+                Every time you view a paywalled article, we’ll automatically
+                look for a copy in our index
+                of over 20 million free, legal fulltext PDFs.
+                If we find one, we give you a link and you read. Open access has never been easier.
+            </p>
+        </div>
+        <div class="content">
+            <h2>FAQ</h2>
+            <dl>
+                <dt>Where does your data come from?</dt>
+                <dt>
+
+                </dt>
+                <dt>Who are you, and why are you doing this?</dt>
+                <dt>
+
+                </dt>
+                <dt>How often does UnPaywall actually find a free PDF for a given article?</dt>
+                <dt>
+
+                </dt>
+                <dt>How is this different from Sci-Hub?</dt>
+                <dt>
+
+                </dt>
+                <dt>I found a bug</dt>
+                <dt>
+
+                </dt>
+
+            </dl>
+
+        </div>
+
+    </div>
+
 
 </div>
