--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -1,68 +1,88 @@
 <html>
 <head>
     <style>
-        body {
-            background: #888;
+
+        .button {
             color: #fff;
             cursor:default;
-            font-size: 8px;
+            font-size: 10px;
             font-family:  "Helvetica", "Arial", "sans-serif";
             text-align: center;
-        }
-        div.icon img {
-            height: 16px;
-        }
-        div.label {
-            margin-top: 5px;
+            padding: 0;
+            margin: 0;
+            width: 50px;
+            height: 50px;
+            border-radius: 30px;
+            box-shadow: 1px 1px 5px #000;
+            display: none;
         }
 
+        div.icon img {
+            height: 16px;
+            margin-top: 9px;
+        }
+        div.label {
+            margin-top: 2px;
+        }
+
+        /* success! */
+        .button.success {
+            background: #4CAF50;
+            cursor: pointer;
+            opacity: 1;
+        }
+        .button.success:hover {
+            background: #43A047;
+        }
+
+
         /* loading */
-        body.loading {
+        /*
+        .button.loading {
+            display: none;
             background-color:rgba(0, 0, 0, 0.1);
             cursor: default;
             opacity: .8;
         }
-        body.loading img.pdf {
+        .button.loading img.pdf {
             display: none;
         }
-        body.loading .loading-icon {
+        .button.loading .loading-icon {
+            display: none
             display: inline-block;
         }
-
-
-        /* success! */
-        body.success {
-            background: red;
-            cursor: pointer;
-        }
-        body.success img.pdf {
-            display: inline-block;
-        }
-        body.success .loading-icon {
-            display: none;
-        }
-
+        */
 
         /* failure :( */
-        body.failure {
+        /*
+        .button.failure {
             display: none;
         }
+        */
 
 
 
     </style>
 </head>
-<body class="loading">
-    <div class="icon">
-        <!--<img class="loading" src="/img/spinner.gif" alt="">-->
+<body>
+
+    <div class="button success">
+        <div class="icon">
+            <img src="img/unlock.png" alt="">
+        </div>
+        <div class="label">
+            Free
+        </div>
+    </div>
+
+    <!--
+    <div class="button loading">
         <span class="loading-icon">
             <svg width="16px" height="16px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><circle cx="50" cy="50" r="40" stroke-dasharray="163.36281798666926 87.9645943005142" stroke="#ffffff" fill="none" stroke-width="20"><animateTransform attributeName="transform" type="rotate" values="0 50 50;180 50 50;360 50 50;" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" begin="0s"></animateTransform></circle></svg>
         </span>
-        <img class="pdf" src="img/pdf.png" alt="">
     </div>
-    <div class="label">
-        PDF
-    </div>
+    -->
+
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="inside-frame.js"></script>
