tab instead of button.

--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -1,19 +1,24 @@
 <html>
 <head>
     <style>
+        body {
+            padding: 0;
+            margin: 0;
+        }
 
         .button {
             color: #fff;
             cursor:default;
-            font-size: 10px;
+            font-size: 12px;
             font-family:  "Helvetica", "Arial", "sans-serif";
             text-align: center;
-            padding: 0;
-            margin: 0;
+            padding: 10px 5px 10px 15px;
+            margin: 5px 0 0 0;
             width: 50px;
             height: 50px;
-            border-radius: 30px;
-            box-shadow: 1px 1px 5px #000;
+            float: right;
+            border-radius: 40px 0 0 40px;
+            box-shadow: 0 0 5px #000;
             display: none;
         }
 
@@ -22,7 +27,7 @@
             margin-top: 9px;
         }
         div.label {
-            margin-top: 2px;
+            margin-top: 4px;
         }
 
         /* success! */
