skeleton key logo, navbar.

--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -32,12 +32,12 @@
 
         /* success! */
         .button.success {
-            background: #4CAF50;
+            background: #00e676;
             cursor: pointer;
             opacity: 1;
         }
         .button.success:hover {
-            background: #43A047;
+            background: #27cc4e;
         }
 
 
