--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -1,7 +1,13 @@
 <div class="page landing">
     <div class="top-screen screen" layout="row" layout-align="center center">
+        <div class="navbar">
+            <img id="logo" src="static/img/logo.png" alt="">
+            <a class="more" href="">
+                <i class="fa fa-question-circle-o"></i>
+            </a>
+        </div>
+
         <div class="content">
-            <img src="static/img/logo-hex.png" alt="">
             <div class="tagline">
                 Find open-access versions of paywalled research papers, instantly.
             </div>
@@ -9,7 +15,14 @@
             <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
                class="main-button">
                 <i class="fa fa-chrome"></i>
-                Install it free
+                <span class="text">
+                    <span class="big">
+                        Install it free
+                    </span>
+                    <span class="small">
+                        at the Chrome Web Store
+                    </span>
+                </span>
             </a>
         </div>
     </div>
