scrolls to About section when you click question-mark in menubar.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -2,7 +2,7 @@
     <div class="top-screen screen" layout="row" layout-align="center center">
         <div class="navbar">
             <img id="logo" src="static/img/logo.png" alt="">
-            <a class="more" href="">
+            <a class="more" href="" ng-click="scrollToAbout()">
                 <i class="fa fa-question-circle-o"></i>
             </a>
         </div>
@@ -26,7 +26,7 @@
             </a>
         </div>
     </div>
-    <div class="about-screen screen">
+    <div class="about-screen screen" id="about">
         <div class="content">
             <h2>About</h2>
             <p>
