hide tab if we're already on the Green OA source of if Gold OA.

--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -18,13 +18,13 @@
             height: 50px;
             float: right;
             border-radius: 40px 0 0 40px;
-            box-shadow: 0 0 5px #000;
+            box-shadow: 0 1px 5px -1px #333;
             display: none;
         }
 
         div.icon img {
-            height: 16px;
-            margin-top: 9px;
+            height: 20px;
+            margin-top: 6px;
         }
         div.label {
             margin-top: 4px;
@@ -32,12 +32,13 @@
 
         /* success! */
         .button.success {
-            background: #00e676;
+            background: #20e168;
             cursor: pointer;
             opacity: 1;
         }
         .button.success:hover {
-            background: #27cc4e;
+            padding-right: 7px;
+            /*background: #21dc67;*/
         }
 
 
