--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -20,7 +20,7 @@
                         Install it free
                     </span>
                     <span class="small">
-                        at the Chrome Web Store
+                        on the Chrome Web Store
                     </span>
                 </span>
             </a>
