--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -63,8 +63,8 @@
                     and <a href="https://en.wikipedia.org/wiki/Institutional_repository">institutional repositories,</a>
                     worldwide, making them free for anyone to read. There was just no easy 
                     way to find them, especially not one that was integrated into our 
-                    reading workflows. So we made one! In the long term, we think tools like
-                    Unpaywall will nurture the transition to a fully
+                    reading workflows. So we made one! Our long-term goal with
+                    Unpaywall is to nurture the transition to a fully
                     <a href="https://en.wikipedia.org/wiki/Open_access">open access</a>
                     scholarly publishing model, by closing the gap between readers and
                     freely-available fulltext.
@@ -73,7 +73,7 @@
 
                 <dt>How do I use this?</dt>
                 <dd>
-                    There's nothing to it. After you
+                    After you
                     <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha">install the extension</a>
 
                     we'll do the work in the background. When you view a paywalled article,
@@ -118,7 +118,7 @@
                     by the authors themselves, while
                     Sci-Hub uses PDFs that are obtained by other means including automated web scraping
                     of publisher sites. Sci-Hub's method delivers more comprehensive results,
-                    but is probably not super legal.
+                    but is not super legal.
                     <a href="http://blog.impactstory.org/comparing-sci-hub-oadoi/">We're not against Sci-Hub.</a>
                     But we  think Unpaywall offers a more sustainable approach, by working within copyright law
                     and supporting the growing open access movement.
@@ -142,4 +142,43 @@
     </div>
 
 
+</div>
+<div class="footer">
+    <div class="content" layout="row" layout-xs="column">
+        <div class="credit" flex="40" flex-xs="100">
+            <span class="built-by">
+                Built with <i class="fa fa-heart"></i> at
+                <a href="http://impactstory.org/about">Impactstory</a>, with support from
+            </span>
+            <span class="funders">
+                 the National Science Foundation and the Alfred P. Sloan Foundation
+            </span>
+        </div>
+
+        <div class="logo" flex="20" hide-xs>
+            <a href="/" ng-click="scrollToTop()">
+                <img src="static/img/key.png" alt="">
+            </a>
+        </div>
+
+
+
+
+
+        <div class="links" flex="40" flex-xs="100">
+            <a href="mailto:team@impactstory.org">
+                <i class="fa fa-envelope-o"></i>
+                Email
+            </a>
+            <a href="http://twitter.com/impactstory">
+                <i class="fa fa-twitter"></i>
+                Twitter
+            </a>
+            <a href="http://github.org/Impactstory/unpawall">
+                <i class="fa fa-github"></i>
+                GitHub
+            </a>
+        </div>
+
+    </div>
 </div>
