top screen looks ok on mobile.

--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -11,6 +11,12 @@
             <div class="tagline">
                 Find open-access versions of paywalled research papers, instantly.
             </div>
+            <div class="about">
+               Every time you hit a paywalled article, Unpaywall automatically
+                looks for a copy in our index
+                of over 20 million free, legal fulltext PDFs.
+                If we find one, we give you a link to read. Open access has never been easier.
+            </div>
 
             <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
                class="main-button">
@@ -27,24 +33,6 @@
         </div>
     </div>
     <div class="about-screen screen" id="about">
-        <div class="content">
-            <h2>About</h2>
-            <p>
-                Ever find that perfect scholarly article, only to get stopped by a paywall?
-                We can help.
-            </p>
-            <p>
-                <!--
-                It’s easy to use: just install the browser extension
-                from the Chrome App store, and keep browsing like you normally do.
-                -->
-
-                Every time you hit a paywalled article, Unpaywall automatically
-                looks for a copy in our index
-                of over 20 million free, legal fulltext PDFs.
-                If we find one, we give you a link to read. Open access has never been easier.
-            </p>
-        </div>
         <div class="content">
             <h2>FAQ</h2>
             <dl>
