--- a/static/src/landing.tpl.html
+++ b/static/src/landing.tpl.html
@@ -15,7 +15,9 @@
                Every time you hit a paywalled article, Unpaywall automatically
                 looks for a copy in our index
                 of over 20 million free, legal fulltext PDFs.
-                If we find one, we give you a link to read. Open access has never been easier.
+                If we find one, we give you a link to read.
+                <br>
+                Open access has never been easier.
             </div>
 
             <a href="https://chrome.google.com/webstore/detail/unpaywall/iplffkdpngmdjhlpjmppncnlhomiipha"
@@ -32,13 +34,15 @@
             </a>
         </div>
     </div>
-    <div class="about-screen screen" id="about">
+
+
+    <div class="faq screen" id="faq">
         <div class="content">
             <h2>FAQ</h2>
             <dl>
-                <dt>Who is behind Unpaywall?</dt>
+                <dt>Who's behind Unpaywall?</dt>
                 <dd>
-                    Unpaywall is from <a href="http://impactstory.org">Impactstory,</a>
+                    We're <a href="http://impactstory.org">Impactstory,</a>
                     a nonprofit working to supercharge science by making it
                     more open, reusable, and web-native.
                 </dd>
@@ -51,7 +55,7 @@
                     and <a href="https://en.wikipedia.org/wiki/Institutional_repository">institutional repositories,</a>
                     worldwide, making them free for anyone to read. There was just no easy 
                     way to find them, especially not one that was integrated into our 
-                    reading workflows. So we made one! Our long-term goal with
+                    reading workflows. So we made one! Over the longer term, our goal for
                     Unpaywall is to nurture the transition to a fully
                     <a href="https://en.wikipedia.org/wiki/Open_access">open access</a>
                     scholarly publishing model, by closing the gap between readers and
@@ -83,35 +87,32 @@
 
                 </dd>
 
-                <dt>Where does your data come from?</dt>
-                <dd>
-                    We gather information from thousands of different open-access repositories, with the
-                    help of a number of partners. In particular, we depend on data from
-                    <a href="https://doaj.org/">the DOAJ,</a>
-                    <a href="https://www.crossref.org/">Crossref,</a>
-                    <a href="https://www.datacite.org/">DataCite,</a>
-                    and (especially) <a href="https://www.base-search.net/">BASE.</a>
-                    All this data is available for free via the API of another Impactstory project,
-                    <a href="http://oadoi.org">oaDOI.</a>
-
-                    The oaDOI API is fully free,
-                    open, and scalable and lots of folks are building cool stuff on it already...check
-                    it out if you'd like to build something too!
-                </dd>
-
-                <dt>How is this different from Sci-Hub?</dt>
+                <dt>How's this different from Sci-Hub?</dt>
                 <dd>
                     Like Unpaywall, Sci-Hub finds fulltext PDFs for paywalled articles. The main difference
                     is where those PDFs come from: Unpaywall finds PDFs legally uploaded
                     by the authors themselves, while
-                    Sci-Hub uses PDFs that are obtained by other means including automated web scraping
+                    Sci-Hub uses PDFs that are obtained by other means, including automated web scraping
                     of publisher sites. Sci-Hub's method delivers more comprehensive results,
-                    but is not super legal.
-                    <a href="http://blog.impactstory.org/comparing-sci-hub-oadoi/">We're not against Sci-Hub.</a>
-                    But we  think Unpaywall offers a more sustainable approach, by working within copyright law
+                    but is not super legal. So while
+                    <a href="http://blog.impactstory.org/comparing-sci-hub-oadoi/">we're not against Sci-Hub,</a>
+                    we think Unpaywall offers a more sustainable approach by working within copyright law
                     and supporting the growing open access movement.
                 </dd>
 
+                <dt>How do you find your fulltext articles?</dt>
+                <dd>
+                    We gather information from thousands of different open-access repositories with the
+                    help many awesome open data sources, especially
+                    <a href="https://doaj.org/">the DOAJ,</a>
+                    <a href="https://www.crossref.org/">Crossref,</a>
+                    <a href="https://www.datacite.org/">DataCite,</a>
+                    and <a href="https://www.base-search.net/">BASE.</a>
+
+                    We in turn make all this data open via the
+                     <a href="http://oadoi.org/about">oaDOI</a> API: a free, fast, and very scalable
+                    way to leverage our infrastructure to build your own projects.
+                </dd>
 
                 <dt>I found a bug</dt>
                 <dd>
