--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <link href="/font-awesome.min.css" rel="stylesheet">
+
     <style>
         body {
             padding: 0;
@@ -75,7 +77,7 @@
 
     <div class="button success">
         <div class="icon">
-            <img src="img/unlock.png" alt="">
+            <i class="fa fa-unlock-alt"></i>
         </div>
         <div class="label">
             Free
