fontawesome loads. icon needs styling still.

--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link href="/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
 
     <style>
         body {
