dumb var name bug. fixed.

--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -25,9 +25,9 @@
             opacity: 1;
         }
 
-        div.icon img {
-            height: 20px;
-            margin-top: 6px;
+        div.icon i.fa {
+            font-size: 22px;
+            margin-top: 4px;
         }
         div.label {
             margin-top: 4px;
@@ -41,7 +41,8 @@
             background: #20e168;
         }
         .button.gold {
-            background: goldenrod;
+            background: gold;
+            color: #555;
         }
 
 
