--- a/extension/unpaywall.html
+++ b/extension/unpaywall.html
@@ -13,36 +13,50 @@
             font-size: 12px;
             font-family:  "Helvetica", "Arial", "sans-serif";
             text-align: center;
-            padding: 10px 5px 10px 15px;
-            margin: 5px 0 0 0;
-            width: 50px;
-            height: 50px;
+            margin: 0;
+            width: 35px;
+            height: 40px;
             float: right;
             border-radius: 40px 0 0 40px;
             box-shadow: 0 1px 5px -1px #333;
-            display: none;
             cursor: pointer;
             opacity: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-right: none;
+            background: #fff;
         }
 
-        div.icon i.fa {
+        div.icon {
             font-size: 22px;
-            margin-top: 4px;
+            margin-left: 3px;
+            margin-top: 2px;
         }
         div.label {
             margin-top: 4px;
         }
         .button:hover {
-            padding-right: 7px;
+            padding-right: 2px;
             /*background: #21dc67;*/
         }
 
         .button.green {
             background: #20e168;
+            /*color: #20e168;*/
+            /*border: 1px solid #20e168;*/
+        }
+        .button.blue {
+            background: dodgerblue;
+            /*color: dodgerblue;*/
+            /*border: 1px solid dodgerblue;*/
         }
         .button.gold {
-            background: gold;
-            color: #555;
+            background: #f9bc01;
+
+            /*color: #f9bc01;*/
+            /*border: 1px solid #f9bc01;*/
+
         }
 
 
@@ -80,19 +94,7 @@
         <div class="icon">
             <i class="fa fa-unlock-alt"></i>
         </div>
-        <div class="label">
-            Free
-        </div>
     </div>
-
-    <!--
-    <div class="button loading">
-        <span class="loading-icon">
-            <svg width="16px" height="16px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><circle cx="50" cy="50" r="40" stroke-dasharray="163.36281798666926 87.9645943005142" stroke="#ffffff" fill="none" stroke-width="20"><animateTransform attributeName="transform" type="rotate" values="0 50 50;180 50 50;360 50 50;" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" begin="0s"></animateTransform></circle></svg>
-        </span>
-    </div>
-    -->
-
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="inside-frame.js"></script>
